# clyngor

./: .gitignore  MANIFEST.in  Makefile  README.mkd  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
clyngor/: __init__.py  __main__.py  answers.py  as_pyasp.py  asp_parsing.py  decoder.py  grounding.py  inline.py  parsing.py  propagator.py  propagators.py  solving.py  upapi.py  utils.py
clyngor-parser/: Makefile  README.mkd
clyngor-parser/clyngor_parser/: __init__.py  __main__.py  alt_parse.py  debugging.py  graph.py  pprint.py  precise_parser.py  smart_parser.py
clyngor-parser/test/: test_api.py  test_asp_parsing.py  test_asp_parsing_graph.py  test_byline_awful_source.py  test_byline_parser.py  test_debug_asp.py
clyngor/asp_parsing/: __init__.py  alt_parse.py  asp_parsing.py  byline_parser.py  debugging.py  grammar.py  graph.py  parser.py  pprint.py  precise_parser.py  smart_parser.py
clyngor/test/: conftest.py  definitions.py  test_answers.py  test_api.py  test_asp_parsing.py  test_asp_parsing_graph.py  test_byline_awful_source.py  test_byline_parser.py  test_clingo_module.py  test_debug_asp.py  test_decoder.py  test_grounding.py  test_parsing.py  test_propagator_class.py  test_solving.py  test_stress.py  test_time_limit.py  test_upapi.py  test_utils.py
examples/: asprin.py  decoupled-grounding.py  enum-optN.py  number_of_models.py  pyconstraint-is-not-working.lp  pyconstraint.lp
