[metadata]
name = clyngor
version = 0.2.4.dev0
description = Python wrapper around Clingo/Answer Set Programming
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/clyngor
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: ASP

[options]
zip_safe = False
include_package_data = True
install_requires =
    Arpeggio>=1.6.1
    pyPEG2>=2.15.2
    pytest>=3.2.1

[options.packages.find]
where = .
exclude = clyngor-parser
