[metadata]
name = clyngor
version = attr: clyngor.__version__
description = Python wrapper around Clingo/Answer Set Programming
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/clyngor
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: ASP

[options]
zip_safe = False
include_package_data = True
packages = clyngor
install_requires =
    Arpeggio>=1.6.1
    pyPEG2>=2.15.2
    pytest>=3.2.1


[zest.releaser]
create-wheel = yes
python-file-with-version = clyngor/__init__.py
